# hcharselect

./: .gitignore  CliMain.hs  GuiMain.hs  Main.hs  Makefile  Parser.hs  README.org  hcharselect.cabal
HCharselect/: Character.hs  Cli.hs  CommonOptions.hs  Concurrency.hs  Config.hs  Get.hs  Gui.hs  Parser.hs  Search.hs  Utils.hs
