Name:                   hcharselect
Version:                0.1
Category:               Misc
Synopsis:               UTF-8 character selector
Description:
                        A simple GUI (gtk2) tool to interactively select and
                        copy UTF-8 characters. See README.org for details.

Homepage:               http://git.cs.fau.de/?p=lu03pevi/charselect
License:                GPL-3
License-File:           COPYING
Cabal-Version:          >= 1.6
Maintainer:             hpdeifel at gmx . de
Author:                 Hans-Peter Deifel
Build-Type:             Simple
Extra-Source-Files:     README.org

Source-Repository head
  Type:                 git
  Location:             http://git.cs.fau.de/?p=lu03pevi/charselect

Executable hcharselect
  Build-Depends:        base,
                        process,
                        mtl,
                        bytestring,
                        gtk >= 0.12.0,
                        deepseq,
                        utf8-string,
                        parallel

  GHC-Options:          -O3 -threaded
  Main-Is:              GuiMain.hs
  Other-Modules:        HCharselect.Get,
                        HCharselect.Parser,
                        HCharselect.Gui,
                        HCharselect.Concurrency
                        HCharselect.Character
                        HCharselect.Search
                        HCharselect.CommonOptions

Executable hcs
  Build-Depends:        base,
                        mtl,
                        bytestring,
                        utf8-string

  GHC-Options:          -O3 -threaded
  Main-Is:              CliMain.hs
  Other-Modules:        HCharselect.Get,
                        HCharselect.Parser,
                        HCharselect.Character
                        HCharselect.Search
                        HCharselect.CommonOptions
